# ivp

./: .gitignore  CITATION.cff  Cargo.toml  PERFORMANCE_SUGGESTIONS.md  README.md  pyproject.toml
.cargo/: config.toml
benches/: benchmark.py
examples/: amplifier.rs  benchmark.py  bouncing_ball.py  bouncing_ball.rs  cr3bp.py  cr3bp.rs  dense_output.py  dense_output.rs  exponential_decay.py  exponential_decay.rs  features_demo.py  harmonic_oscillator.rs  van_der_pol.py  van_der_pol.rs
ref/: dop853.f  dr_dop853.f
src/: args.rs  dense.rs  dop853.rs  dopri5.rs  error.rs  hinit.rs  interpolate.rs  ivp.rs  lib.rs  ode.rs  prelude.rs  python.rs  result.rs  settings.rs  solout.rs  solution.rs  solve_ivp.rs  status.rs  tolerance.rs
src/core/: mod.rs  result.rs  solout.rs  solution.rs
src/dp/: dop853.rs  dopri5.rs  hinit.rs  mod.rs
src/matrix/: add.rs  base.rs  index.rs  linear.rs  lu.rs  macros.rs  mod.rs  mul.rs  sub.rs
src/methods/: bdf.rs  common.rs  dop853.rs  dopri5.rs  hinit.rs  mod.rs  radau.rs  result.rs  rk23.rs  rk4.rs  settings.rs
src/methods/bdf/: bdf15.rs  mod.rs
src/methods/dp/: dop853.rs  dopri5.rs  mod.rs
src/methods/radau/: mod.rs  radau5.rs
src/methods/rk/: mod.rs  rk23.rs  rk4.rs
src/python/: conversion.rs  ivp_wrapper.rs  mod.rs  result.rs  solution.rs  solve.rs  sparsity.rs
src/rk/: mod.rs  rk23.rs  rk4.rs
src/solve/: cont.rs  event.rs  mod.rs  options.rs  solout.rs  solution.rs  solve_ivp.rs
tests/: accuracy.rs  backward_and_bounds.rs  common.rs  conftest.py  ivp.rs  test_args.py  test_basic_integration.py  test_edge_cases.py  test_events.py  test_helpers.py  test_ivp.py  test_step_control.py  test_stiff.py  test_t_eval.py
