[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ivp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
]

[tool.maturin]
features = ["python"]

[tool.uv]
dev-dependencies = [
    "maturin>=1.10.2",
    "numpy>=2.3.5",
    "pytest>=9.0.1",
    "scipy>=1.16.3",
]
